<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">

    <data>
        <variable name="seconds" type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/top_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:text="@string/score_text"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/seconds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_divider" />

        <TextView
            android:id="@+id/seconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center_horizontal"
            android:text="@{seconds + ` seconds`}"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/star3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_text" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/star"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/rank_star_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toStartOf="@+id/star2"
            app:layout_constraintTop_toBottomOf="@+id/score_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/star2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="104dp"
            android:layout_marginLeft="104dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/rank_star_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toStartOf="@+id/star3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_text"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/star3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="164dp"
            android:layout_marginLeft="164dp"
            android:contentDescription="@string/rank_star_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toStartOf="@+id/star4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_text"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/star4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="224dp"
            android:layout_marginLeft="224dp"
            android:contentDescription="@string/rank_star_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_text"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/star5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/rank_star_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.822"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_text"
            app:layout_constraintVertical_bias="0.512"
            app:srcCompat="@drawable/star" />

        <Button
            android:id="@+id/next"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/play_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.686" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>