<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameFragment">

    <data>
        <variable
            name="playerName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/teal_200"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/top_divider">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_splash_description"
                tools:layout_editor_absoluteX="232dp"
                tools:layout_editor_absoluteY="47dp"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_divider">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.046" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark"
                android:contentDescription="@string/question_mark_description" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark"
                android:contentDescription="@string/question_mark_description"/>

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="160dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark"
                android:contentDescription="@string/question_mark_description"/>

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="160dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/imageButton6"
                app:layout_constraintHorizontal_bias="0.608"
                app:layout_constraintStart_toEndOf="@+id/imageButton4"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="296dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/imageButton9"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toEndOf="@+id/imageButton7"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="296dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="296dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="432dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="432dp"
                android:contentDescription="@string/question_mark_description"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="432dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/imageButton10"
                app:layout_constraintStart_toEndOf="@+id/imageButton12"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/question_mark"
                android:contentDescription="@string/question_mark_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.875" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_divider">

            <ImageView
                android:id="@+id/star"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/rank_star_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/star2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/star" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="104dp"
                android:layout_marginLeft="104dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/rank_star_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/star3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                app:srcCompat="@drawable/star" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="164dp"
                android:layout_marginLeft="164dp"
                android:contentDescription="@string/rank_star_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/star4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                app:srcCompat="@drawable/star" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="224dp"
                android:layout_marginLeft="224dp"
                android:contentDescription="@string/rank_star_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/star5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                app:srcCompat="@drawable/star" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/rank_star_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.822"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.512"
                app:srcCompat="@drawable/star" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>